# nextbox

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
nextbox/: __init__.py  command_handler.py  commands.py  worker.py
